crates/typecheck/tests/fixtures/errors/trait_not_found.ax
struct Circle { radius: Float }
impl Shape for Circle { }
fn main() { }
